refactor(port): Reference & Networking